[package]
name = "porkbun-ddns"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "2.7", features = ["json", "native-certs"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.8"
